# conway

./: .mise.toml  conway.py  nca.py  pyproject.toml
